[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [
    "r1cs",
] }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-relations = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
